# rango

./: .env  .gitignore  Cargo.toml  README.md  database.db  package-lock.json  rundev.sh  tailwind.config.js  test.db
app/: Cargo.toml
app/src/: main.rs
app/src/controllers/: mod.rs  user_controler.rs
controllers/: Cargo.toml
controllers/src/: lib.rs  user.rs
migrate/: Cargo.toml
migrate/src/: main.rs
migrations/2023-11-06-142836_create_user/: up.sql
models/: Cargo.toml
models/src/: lib.rs
security/: Cargo.toml
security/src/: lib.rs
src/: main.rs  schema.rs
src/auth/: mod.rs  security.rs
src/model_view/: mod.rs
src/repositories/: mod.rs  user.rs
src/services/: auth.rs  user.rs
templates/: index.html.j2
