[workspace]
resolver = "2"
members = ["app", "controllers", "migrate", "models"]


[workspace.dependencies.rusql-alchemy]
version = "0.3.0-rc"
default-features = false
features = ["postgres"]

[workspace.dependencies]
sqlx = "^0.8.0"
serde = { version = "^1.0.203", features = ["derive"] }
rocket = { version = "^0.5.0" }
