[workspace]
resolver = "2"
members = ["app", "controllers", "migrate", "models"]


[workspace.dependencies.rusql-alchemy]
git = "https://github.com/j03-dev/rusql-alchemy"
branch = "main"
features = ["sqlite"]

[workspace.dependencies]
sqlx = "^0.8"
serde = { version = "^1.0.203", features = ["derive"] }
rocket = { version = "^0.5.0" }
