[workspace]
resolver = "2"
members = ["app", "controllers", "migrate", "models"]

[workspace.dependencies.rocket_security]
version = "0.1.0"
git = "https://github.com/j03-dev/rocket_security"
branch = "main"

[workspace.dependencies.rusql-alchemy]
git = "https://github.com/j03-dev/rusql-alchemy"
branch = "main"

[workspace.dependencies]
sqlx = "^0.8"
serde = "^1.0.203"
rocket = "^0.5.0"
rocket_dyn_templates = "0.2.0"
rocket_cors = "0.6.0"
models = { path = "models" }
tokio = "^1.38.0"
bcrypt = "0.16.0"
