[package]
name = "controllers"
version = "0.1.0"
edition = "2021"

[dependencies.rocket_security]
version = "0.1.0"
git = "https://github.com/j03-dev/rocket_security"
branch = "main"

[dependencies.models]
path = "../models"

[dependencies]
rocket = { version = "^0.5.0", features = ["json"] }
rocket_cors = "0.6.0"
serde = { version = "^1.0.203", features = ["derive"] }
sqlx = "^0.7.0"
rusql-alchemy = { version = "0.1.2", default-feautes = false,  features= ["postgres"] } 