[package]
name = "controllers"
version = "0.1.0"
edition = "2021"


[dependencies]
rocket = { workspace = true, features = ["json"] }
rocket_dyn_templates = { workspace = true, features = ["minijinja"] }
rocket_cors.workspace = true
rusql-alchemy = { workspace = true, features = ["sqlite"] }
sqlx.workspace = true
serde = { workspace = true, features = ["derive"] }
rocket_security.workspace = true
argon2.workspace = true
models.workspace = true
anyhow.workspace = true
